--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         <div class="container">
           <div class="row align-items-center justify-content-center">
             <div class="col-md-7 text-center" data-aos="fade">
-              <h2 class="caption mb-2">Yoga for everybody</h2>
-              <h1 class="">Welcome To YaYoga</h1>
+              <h2 class="caption mb-2">Йога для всех</h2>
+              <h1 class="">Ретриты YaYoga</h1>
               
             </div>
           </div>
@@ -121,13 +121,12 @@
     </div>
 
     <div class="site-block-half d-flex">
-      <div class="image bg-image" style="background-image: url('hero-photo.jpg');"></div>
+      <div class="image bg-image" style="background-image: url('about_us_small.jpg');"></div>
       <div class="text">
         <h2 class="font-family-serif">О нас</h2>
         <span class="caption d-block text-primary pl-0 mb-4">Привет друг!</span>
         <p class="mb-5">YaYoga - это компания, родившаяся из мечты о качественной практике йоги в самых красивых уголках мира. <br>
-          Мы - Армине и Гаяне - создаем туры, в которых вы ощущаете нашу заботу о вашей комфортной практике и отдыхе.
-          Мы создаём туры, в которых сами хотели бы поучаствовать. Но делаем мы это для вас и про вас.
+          Мы - Армине и Гаяне - создаём туры, в которых сами хотели бы поучаствовать. Но делаем мы это для вас и про вас.
           </p>
         <p><a href="#" class="btn btn-primary pill px-4 py-3 text-white">Поехали в тур!</a></p>
 
@@ -141,18 +140,18 @@
             <h2 class="mb-5">Наши туры</h2>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-6 col-lg-4 mb-5">
+        <div class="row  justify-content-center">
+          <div class="col-md-6 col-lg-6 mb-5">
             <div class="program">
-              <a href="#" class="d-block mb-0 thumbnail"><img src="images/img_1.jpg" alt="Image" class="img-fluid"></a>
+              <a href="#" class="d-block mb-0 thumbnail"><img src="yoga-retrit.jpg" alt="Image" class="img-fluid"></a>
               <div class="program-body">
-                <h3 class="heading mb-2"><a href="#">Embrace Your Edge</a></h3>
-                <p><a href="#">Healthy Yoga</a> with <a href="#">Vicky Johnson</a></p>
-                <div class="span"><span class="mr-4"><span class="icon-schedule icon"></span> 20 min</span> <span> <span class="icon-signal icon"></span> Beginner</span></div>
+                <h3 class="heading mb-2"><a href="">Йога-ретрит в Черноголовке</a></h3>
+                <!-- <p>Абсолютная перезагрузка</p> -->
+                <div class="span"><span class="mr-4"><span class="icon-schedule icon"></span>26-27 ноября</span></div>
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-4 mb-5">
+          <!-- <div class="col-md-6 col-lg-4 mb-5">
             <div class="program">
               <a href="#" class="d-block mb-0 thumbnail"><img src="images/img_2.jpg" alt="Image" class="img-fluid"></a>
               <div class="program-body">
@@ -161,8 +160,8 @@
                 <div class="span"><span class="mr-4"><span class="icon-schedule icon"></span> 20 min</span> <span> <span class="icon-signal icon"></span> Advanced</span></div>
               </div>
             </div>
-          </div>
-          <div class="col-md-6 col-lg-4 mb-5">
+          </div> -->
+          <!-- <div class="col-md-6 col-lg-4 mb-5">
             <div class="program">
               <a href="#" class="d-block mb-0 thumbnail"><img src="images/img_3.jpg" alt="Image" class="img-fluid"></a>
               <div class="program-body">
@@ -171,7 +170,7 @@
                 <div class="span"><span class="mr-4"><span class="icon-schedule icon"></span> 20 min</span> <span> <span class="icon-signal icon"></span> Intermediate</span></div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- <div class="col-md-6 col-lg-4 mb-5">
             <div class="program">
@@ -247,66 +246,72 @@
         </div>
         <div class="row align-items-stretched">
           <div class="col-md-6 col-lg-3 mb-4">
-            <div class="pricing p-5 h-100 text-center bg-image no-border" style="background-image: url('images/img_1.jpg');">
+            <div class="pricing p-4 h-100 text-center bg-image no-border">
               <div class="pricing-content">
                 <div class="text-center mb-4">
-                  <h3 class="h4 mb-4">New Client Trial Week</h3>
-                  <strong class="font-weight-normal h1 text-white">$20</strong>
+                  <h3 class="h4 mb-4">Коврик для тура</h3>
+                  <!-- <strong class="font-weight-normal h1 text-white">$20</strong> -->
                 </div>
-                <ul class="list-unstyled mb-5">
+                <p>Поделись в своих социальных сетях, что едешь с нами в тур, отметь наш аккаунт и пришли скрин нам. Мы будем благодарны тебе и привезем в тур для тебя коврик, чтобы тебе не пришлось брать его самой.</p>
+                <!-- <ul class="list-unstyled mb-5">
                   <li>1 week unlimitted classes</li>
                   <li>Flexible schedule</li>
                   <li>4-week series</li>
                   <li>10% off Vinyasa treatment</li>
                 </ul>
-                <p class="mb-0"><a href="#" class="btn pill btn-outline-white">Join Now</a></p>
+                <p class="mb-0"><a href="#" class="btn pill btn-outline-white">Join Now</a></p> -->
               </div>
             </div>
           </div>
           <div class="col-md-6 col-lg-3 mb-4">
-            <div class="pricing p-5 h-100 text-center">
+            <div class="pricing p-4 h-100 text-center">
               <div class="text-center mb-4">
-                <h3 class="h4 mb-4">10 Days Yoga Class</h3>
-                <strong class="font-weight-normal h1">$40</strong>
+                <h3 class="h4 mb-4">C друзьями приятнее</h3>
+                <!-- <strong class="font-weight-normal h1">$40</strong> -->
               </div>
-              <ul class="list-unstyled mb-5">
+              <p>Возьми с собой в тур друга и мы предложим вам более выгодные условия для участия. Смотри в описании к каждому туру стоимость "Для двоих". </p>
+              <!-- <ul class="list-unstyled mb-5">
                   <li>10 days classes</li>
                   <li>Flexible schedule</li>
                   <li>4-week series</li>
                   <li>10% off Vinyasa treatment</li>
                 </ul>
-                <p class="mb-0"><a href="#" class="btn pill btn-primary">Join Now</a></p>
+                <p class="mb-0"><a href="#" class="btn pill btn-primary">Join Now</a></p> -->
             </div>
           </div>
           <div class="col-md-6 col-lg-3 mb-4">
-            <div class="pricing p-5 h-100 text-center">
+            <div class="pricing p-4 h-100 text-center bg-image no-border">
+              <div class="pricing-content">
               <div class="text-center mb-4">
-                <h3 class="h4 mb-4">20 Days Yoga Class</h3>
-                <strong class="font-weight-normal h1">$70</strong>
+                <h3 class="h4 mb-4">На доверии</h3>
+                <!-- <strong class="font-weight-normal h1">$70</strong> -->
               </div>
-              <ul class="list-unstyled mb-5">
+              <p>Если ты давно уже с нами в турах и доверяешь нам, тебе не нужно чековое подтверждение оплаты - напиши нам и дадим тебе особые условия для бронирования.</p>
+              <!-- <ul class="list-unstyled mb-5">
                   <li>20 days classes</li>
                   <li>Flexible schedule</li>
                   <li>4-week series</li>
                   <li>10% off Vinyasa treatment</li>
                 </ul>
-                <p class="mb-0"><a href="#" class="btn pill btn-primary">Join Now</a></p>
+                <p class="mb-0"><a href="#" class="btn pill btn-primary">Join Now</a></p> -->
+              </div>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 mb-4">
-            <div class="pricing p-5 h-100 text-center">
+            <div class="pricing p-4 h-100 text-center">
               <div class="text-center mb-4">
-                <h3 class="h4 mb-4">30 Days Yoga Class</h3>
-                <strong class="font-weight-normal h1">$150</strong>
+                <h3 class="h4 mb-4">На полном доверии</h3>
+                <!-- <strong class="font-weight-normal h1">$150</strong> -->
               </div>
-              <ul class="list-unstyled mb-5">
+              <p>Для тех, кто первым бронирует наши новые туры - всегда самые выгодные условия. В благодарность за доверие к нам. Смотри тарифы в описании к каждому туру.</p>
+              <!-- <ul class="list-unstyled mb-5">
                   <li>30 days classes</li>
                   <li>Flexible schedule</li>
                   <li>4-week series</li>
                   <li>10% off Vinyasa treatment</li>
                 </ul>
-                <p class="mb-0"><a href="#" class="btn pill btn-primary">Join Now</a></p>
+                <p class="mb-0"><a href="#" class="btn pill btn-primary">Join Now</a></p> -->
             </div>
           </div>
 
@@ -317,36 +322,36 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 mx-auto text-center mb-5 section-heading">
-            <h2 class="mb-5">Yoga Features</h2>
+            <h2 class="mb-5">Почему выбирают нас</h2>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-6 col-md-4 col-lg-3">
             <div class="text-center item">
-              <span class="flaticon-001-stone display-3 mb-3 d-block text-primary"></span>
-              <h2 class="h5">Peace of Mind</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde temporibus</p>
+              <span class="flaticon-003-meditation display-3 mb-3 d-block text-primary"></span>
+              <h2 class="h5">Качественная практика йоги</h2>
+              <p>Мы помним, что делаем вас не просто туры, а йога-туры. Дипломированный опытный преподаватель всегда готовит для вас глубокие и безопасные практики, нацеленные на физическое и ментальное оздоровление, гибкость и выносливость ума и тела. </p>
             </div>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3">
             <div class="text-center item">
               <span class="flaticon-002-lotus display-3 mb-3 d-block text-primary"></span>
-              <h2 class="h5">Mindfullness</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde temporibus</p>
+              <h2 class="h5">Забота о вас</h2>
+              <p>Мы более 10 лет профессионально занимаемся организацией проектов различного формата и строго относимся к качеству оказываемых нами услуг. Мы знаем, как добиться премиального комфорта для вас за минимальную стоимость. Мы ценим вашу безопасность и даем вам официальное подтверждение оплаты тура. </p>
             </div>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3">
             <div class="text-center item">
-              <span class="flaticon-003-meditation display-3 mb-3 d-block text-primary"></span>
-              <h2 class="h5">Meditation</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde temporibus</p>
+              <span class="flaticon-001-stone display-3 mb-3 d-block text-primary"></span>
+              <h2 class="h5">Реализуем мечту</h2>
+              <p>Каждый раз, когда начинаем подготовку к новому туру, мы делаем его таким, о котором мечтали бы сами. Мы вкладываем не только весь наш опыт, но и нашу душу и сердце, чтобы дать участникам тура возможность получить намного больше, чем просто отдых и расслабление.</p>
             </div>
           </div>
           <div class="col-sm-6 col-md-4 col-lg-3">
             <div class="text-center item">
               <span class="flaticon-004-carpet display-3 mb-3 d-block text-primary"></span>
-              <h2 class="h5">Yoga Carpet</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde temporibus</p>
+              <h2 class="h5">Авторские туры</h2>
+              <p>Каждый наш тур - уникален. Мы не идем по легкому пути, предлагая заезженные места и программы для тура. Мы ищем уникальные по своей красоте и комфорту природные локации, дополняем их программой, подходящей только для этого места и создаем туры, которые остаются в памяти надолго.</p>
             </div>
           </div>
 
@@ -535,7 +540,7 @@
         
         <div class="row">
           <div class="col-md-6 mx-auto text-center mb-5 section-heading">
-            <h2>What People Say</h2>
+            <h2>Что говорят о нас</h2>
           </div>
         </div>
 
@@ -701,7 +706,7 @@
           <div class="col-md-12">
             <p>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy; <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> All Rights Reserved | This template is made with <i class="icon-heart text-primary" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
+            <script>document.write(new Date().getFullYear());</script> YaYoga
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
           </div>
