--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     
     <div class="slide-one-item home-slider owl-carousel">
       
-      <div class="site-blocks-cover overlay" style="background-image: url(hero-photo.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
+      <div class="site-blocks-cover overlay" style="background-image: url(hero_new.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
         <div class="container">
           <div class="row align-items-center justify-content-center">
             <div class="col-md-7 text-center" data-aos="fade">
@@ -548,32 +548,33 @@
 
             <div id="accordion" class="py-4">
               <div class="card border-0">
-                  <div class="card-header p-0 border-0" id="heading-239">
-                      <button class="btn btn-link accordion-title border-0 collapse" data-toggle="collapse" data-target="#collapse-239" aria-expanded="true" aria-controls="#collapse-239"><i class="icon-plus text-center d-flex align-items-center justify-content-center h-100"></i>
-                        Что с собой взять?
-                      </button>
-                  </div>
-                  <div id="collapse-239" class="collapse show" aria-labelledby="heading-239" data-parent="#accordion">
-                      <div class="card-body accordion-body">
-                          <p>
-                            <ul>
-                              <li>- Коврик для йоги (если его нет, сообщите нам об этом- мы решим этот вопрос)</li>
-                              <li>- Одежда для занятий йогой, не сковывающая движений</li>
-                              <li>- Сменная одежда и средства личной гигиены</li>
-                              <li>- Рюкзак для походов</li>
-                              <li>- В летний сезон:  солнцезащитный крем, купальник/плавки, головной убор, средство защиты от насекомых</li>
-                              <li>- Индивидуальная аптечка</li>
-                              <li>- Паспорт</li>
-                              <li>- Полис ОМС</li>
-                            </ul>
-                          </p>
-                      </div>
-                  </div>
+                <div class="card-header p-0 border-0" id="heading-239">
+                  <button class="btn btn-link accordion-title border-0 collapse" data-toggle="collapse" data-target="#collapse-239" aria-expanded="true" aria-controls="#collapse-239"><i class="icon-plus text-center d-flex align-items-center justify-content-center h-100"></i>
+                    Что с собой взять?
+                  </button>
+                </div>
+                <div id="collapse-239" class="collapse show" aria-labelledby="heading-239" data-parent="#accordion">
+                    <div class="card-body accordion-body">
+                        <p>
+                          <ul>
+                            <li>- Коврик для йоги (если его нет, сообщите нам об этом- мы решим этот вопрос)</li>
+                            <li>- Одежда для занятий йогой, не сковывающая движений</li>
+                            <li>- Сменная одежда и средства личной гигиены</li>
+                            <li>- Рюкзак для походов</li>
+                            <li>- В летний сезон:  солнцезащитный крем, купальник/плавки, головной убор, средство защиты от насекомых</li>
+                            <li>- Индивидуальная аптечка</li>
+                            <li>- Паспорт</li>
+                            <li>- Полис ОМС</li>
+                          </ul>
+                        </p>
+                    </div>
+                </div>
               </div>
               <div class="card border-0 wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
-                <div class="card-header p-0 border-0" id="heading-240"><button class="btn btn-link accordion-title border-0 collapsed" data-toggle="collapse" data-target="#collapse-240" aria-expanded="false" aria-controls="#collapse-240"><i class="icon-plus text-center d-flex align-items-center justify-content-center h-100"></i>
-                  Получу ли я чек при оплате?
-                </button>
+                <div class="card-header p-0 border-0" id="heading-240">
+                  <button class="btn btn-link accordion-title border-0 collapsed" data-toggle="collapse" data-target="#collapse-240" aria-expanded="false" aria-controls="#collapse-240"><i class="icon-plus text-center d-flex align-items-center justify-content-center h-100"></i>
+                    Получу ли я чек при оплате?
+                  </button>
                 </div>
                 <div id="collapse-240" class="collapse " aria-labelledby="heading-240" data-parent="#accordion">
                   <div class="card-body accordion-body">
@@ -582,9 +583,10 @@
                 </div>
             </div>
               <div class="card border-0 wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
-                <div class="card-header p-0 border-0" id="heading-241"><button class="btn btn-link accordion-title border-0 collapsed" data-toggle="collapse" data-target="#collapse-241" aria-expanded="false" aria-controls="#collapse-241"><i class="icon-plus text-center d-flex align-items-center justify-content-center h-100"></i>
-                  Возвратная ли предоплата при отмене брони места?
-                </button>
+                <div class="card-header p-0 border-0" id="heading-241">
+                  <button class="btn btn-link accordion-title border-0 collapsed" data-toggle="collapse" data-target="#collapse-241" aria-expanded="false" aria-controls="#collapse-241"><i class="icon-plus text-center d-flex align-items-center justify-content-center h-100"></i>
+                    Возвратная ли предоплата при отмене брони места?
+                  </button>
                 </div>
                 <div id="collapse-241" class="collapse " aria-labelledby="heading-241" data-parent="#accordion">
                   <div class="card-body accordion-body">
@@ -593,9 +595,10 @@
               </div>
             </div>
               <div class="card border-0 wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
-                <div class="card-header p-0 border-0" id="heading-242"><button class="btn btn-link accordion-title border-0 collapsed" data-toggle="collapse" data-target="#collapse-242" aria-expanded="false" aria-controls="#collapse-242"><i class="icon-plus text-center d-flex align-items-center justify-content-center h-100"></i>
-                  Что делать, если нет коврика?
-                </button>
+                <div class="card-header p-0 border-0" id="heading-242">
+                  <button class="btn btn-link accordion-title border-0 collapsed" data-toggle="collapse" data-target="#collapse-242" aria-expanded="false" aria-controls="#collapse-242"><i class="icon-plus text-center d-flex align-items-center justify-content-center h-100"></i>
+                    Что делать, если нет коврика?
+                  </button>
                 </div>
                 <div id="collapse-242" class="collapse " aria-labelledby="heading-242" data-parent="#accordion">
                   <div class="card-body accordion-body">
@@ -604,9 +607,10 @@
               </div>
             </div>
               <div class="card border-0 wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
-                <div class="card-header p-0 border-0" id="heading-243"><button class="btn btn-link accordion-title border-0 collapsed" data-toggle="collapse" data-target="#collapse-243" aria-expanded="false" aria-controls="#collapse-243"><i class="icon-plus text-center d-flex align-items-center justify-content-center h-100"></i>
-                  Можно ли брать с собой детей/мужей и других людей, которые не занимаются йогой?
-                </button>
+                <div class="card-header p-0 border-0" id="heading-243">
+                  <button class="btn btn-link accordion-title border-0 collapsed" data-toggle="collapse" data-target="#collapse-243" aria-expanded="false" aria-controls="#collapse-243"><i class="icon-plus text-center d-flex align-items-center justify-content-center h-100"></i>
+                    Можно ли брать с собой детей/мужей и других людей, которые не занимаются йогой?
+                  </button>
                 </div>
                 <div id="collapse-243" class="collapse " aria-labelledby="heading-243" data-parent="#accordion">
                   <div class="card-body accordion-body">
@@ -685,7 +689,7 @@
           <div class="p-4">
             <div class="d-flex block-testimony">
               <div class="person mr-3">
-                <img src="images/person_3.jpg" alt="Image" class="img-fluid rounded">
+                <img src="images/person_4.jpg" alt="Image" class="img-fluid rounded">
               </div>
               <div>
                 <h2 class="h5">Ани, Краснодар, 25 лет</h2>
@@ -696,7 +700,7 @@
           <div class="p-4">
             <div class="d-flex block-testimony">
               <div class="person mr-3">
-                <img src="images/person_3.jpg" alt="Image" class="img-fluid rounded">
+                <img src="images/person_5.jpg" alt="Image" class="img-fluid rounded">
               </div>
               <div>
                 <h2 class="h5">Шушан,  Краснодар, 20 лет</h2>
@@ -707,7 +711,7 @@
           <div class="p-4">
             <div class="d-flex block-testimony">
               <div class="person mr-3">
-                <img src="images/person_4.jpg" alt="Image" class="img-fluid rounded">
+                <img src="images/person_6.jpg" alt="Image" class="img-fluid rounded">
               </div>
               <div>
                 <h2 class="h5">Виолетта, Красноярск, 28 лет</h2>
