--- a/index.html
+++ b/index.html
@@ -370,43 +370,43 @@
           </div>
         </div>
         <div class="row no-gutters">
-          <div class="col-6 col-lg-3">
+          <div class="col-4 col-md-3 col-lg-2">
             <a href="images/img_1.jpg" class="image-popup img-opacity"><img src="images/img_1.jpg" alt="Image" class="img-fluid"></a>
           </div>
-          <div class="col-6 col-lg-3">
+          <div class="col-4 col-md-3 col-lg-2">
             <a href="images/img_2.jpg" class="image-popup img-opacity"><img src="images/img_2.jpg" alt="Image" class="img-fluid"></a>
           </div>
-          <div class="col-6 col-lg-3">
+          <div class="col-4 col-md-3 col-lg-2">
             <a href="images/img_3.jpg" class="image-popup img-opacity"><img src="images/img_3.jpg" alt="Image" class="img-fluid"></a>
           </div>
-          <div class="col-6 col-lg-3">
+          <div class="col-4 col-md-3 col-lg-2">
             <a href="images/img_4.jpg" class="image-popup img-opacity"><img src="images/img_4.jpg" alt="Image" class="img-fluid"></a>
           </div>
 
-          <div class="col-6 col-lg-3">
-            <a href="images/img_4.jpg" class="image-popup img-opacity"><img src="images/img_4.jpg" alt="Image" class="img-fluid"></a>
-          </div>
-          <div class="col-6 col-lg-3">
+          <div class="col-4 col-md-3 col-lg-2">
             <a href="images/img_5.jpg" class="image-popup img-opacity"><img src="images/img_5.jpg" alt="Image" class="img-fluid"></a>
           </div>
-          <div class="col-6 col-lg-3">
+          <div class="col-4 col-md-3 col-lg-2">
             <a href="images/img_6.jpg" class="image-popup img-opacity"><img src="images/img_6.jpg" alt="Image" class="img-fluid"></a>
           </div>
-          <div class="col-6 col-lg-3">
+          <div class="col-4 col-md-3 col-lg-2">
             <a href="images/img_7.jpg" class="image-popup img-opacity"><img src="images/img_7.jpg" alt="Image" class="img-fluid"></a>
           </div>
+          <div class="col-4 col-md-3 col-lg-2">
+            <a href="images/img_8.jpg" class="image-popup img-opacity"><img src="images/img_8.jpg" alt="Image" class="img-fluid"></a>
+          </div>
 
-          <div class="col-6 col-lg-3">
-            <a href="images/img_1.jpg" class="image-popup img-opacity"><img src="images/img_1.jpg" alt="Image" class="img-fluid"></a>
+          <div class="col-4 col-md-3 col-lg-2">
+            <a href="images/img_9.jpg" class="image-popup img-opacity"><img src="images/img_9.jpg" alt="Image" class="img-fluid"></a>
           </div>
-          <div class="col-6 col-lg-3">
-            <a href="images/img_2.jpg" class="image-popup img-opacity"><img src="images/img_2.jpg" alt="Image" class="img-fluid"></a>
+          <div class="col-4 col-md-3 col-lg-2">
+            <a href="images/img_10.jpg" class="image-popup img-opacity"><img src="images/img_10.jpg" alt="Image" class="img-fluid"></a>
           </div>
-          <div class="col-6 col-lg-3">
-            <a href="images/img_3.jpg" class="image-popup img-opacity"><img src="images/img_3.jpg" alt="Image" class="img-fluid"></a>
+          <div class="col-4 col-md-3 col-lg-2">
+            <a href="images/img_11.jpg" class="image-popup img-opacity"><img src="images/img_11.jpg" alt="Image" class="img-fluid"></a>
           </div>
-          <div class="col-6 col-lg-3">
-            <a href="images/img_4.jpg" class="image-popup img-opacity"><img src="images/img_4.jpg" alt="Image" class="img-fluid"></a>
+          <div class="col-4 col-md-3 col-lg-2">
+            <a href="images/img_12.jpg" class="image-popup img-opacity"><img src="images/img_12.jpg" alt="Image" class="img-fluid"></a>
           </div>
 
         </div>
