--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>YaYoga &mdash;Йога-ретриты</title>
+    <title>YaYoga &mdash; Йога-ретриты</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/png" href="favicon.png"/>
@@ -81,9 +81,9 @@
 
                         </ul>
                       </li> -->
-                      <li><a href="events.html">Туры</a></li>
-                      <li><a href="about.html">О нас</a></li>
-                      <li><a href="contact.html">Конакты</a></li>
+                      <li><a href="#">Туры</a></li>
+                      <li><a href="#">О нас</a></li>
+                      <li><a href="#">Конакты</a></li>
                     </ul>
                   </div>
                 </nav>
@@ -768,31 +768,28 @@
 
         <div class="row">
           <div class="col-md-4">
-            <h3 class="footer-heading mb-4 text-white">About</h3>
+            <h3 class="footer-heading mb-4 text-white">О нас</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat quos rem ullam, placeat amet.</p>
-            <p><a href="#" class="btn btn-primary pill text-white px-4">Read More</a></p>
+            <p><a href="#" class="btn btn-primary pill text-white px-4">Подробнее</a></p>
           </div>
           <div class="col-md-6">
             <div class="row">
               <div class="col-md-6">
-                <h3 class="footer-heading mb-4 text-white">Quick Menu</h3>
+                <h3 class="footer-heading mb-4 text-white">Меню</h3>
                   <ul class="list-unstyled">
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Features</a></li>
-                    <li><a href="#">Approach</a></li>
-                    <li><a href="#">Events</a></li>
-                    <li><a href="#">Classes</a></li>
-                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Главная</a></li>
+                    <li><a href="#">Туры</a></li>
+                    <li><a href="#">О нас</a></li>
+                    <li><a href="#">Контакты</a></li>
                   </ul>
               </div>
               <div class="col-md-6">
-                <h3 class="footer-heading mb-4 text-white">Ministries</h3>
+                <h3 class="footer-heading mb-4 text-white">Меню</h3>
                   <ul class="list-unstyled">
-                    <li><a href="#">Yoga for Health</a></li>
-                    <li><a href="#">Yoga for Resilience</a></li>
-                    <li><a href="#">Yoga Class</a></li>
-                    <li><a href="#">Meditation</a></li>
-                    <li><a href="#">Mind Balance</a></li>
+                    <li><a href="#">Главная</a></li>
+                    <li><a href="#">Туры</a></li>
+                    <li><a href="#">О нас</a></li>
+                    <li><a href="#">Контакты</a></li>
                   </ul>
               </div>
             </div>
@@ -800,7 +797,7 @@
 
           
           <div class="col-md-2">
-            <div class="col-md-12"><h3 class="footer-heading mb-4 text-white">Social Icons</h3></div>
+            <div class="col-md-12"><h3 class="footer-heading mb-4 text-white">Соцсети</h3></div>
               <div class="col-md-12">
                 <p>
                   <a href="#" class="pb-2 pr-2 pl-0"><span class="icon-facebook"></span></a>
